fix: anchor icon not showing

--- a/src/css/prose.css
+++ b/src/css/prose.css
@@ -1,5 +1,5 @@
 .prose {
-  @apply text-zinc-600 leading-loose overflow-hidden;
+  @apply text-zinc-600 leading-loose;
   word-break: break-word;
 }
 
